--- a/channel-setting.html
+++ b/channel-setting.html
@@ -185,12 +185,9 @@
                                 <acronym title="Required field" class="mark-required">*</acronym>Promotion banner</label>
                             <div id="iupPromotion" class="fmfield upload-img banner-thumb">
                                 <div class="thumbnail">
-                                    <div class="img-wrap">
-                                        <div class="img">
-                                            <img src="${bannerImageUrl}" class="photo imgUpShow" />
-                                        </div>
+                                    <div class="img-wrap imgUpShow {{if '' === bannerImageUrl}}no-image{{/if}}" 
+                                        style="{{if '' !== bannerImageUrl}}background-image: url('${bannerImageUrl}'){{/if}}">
                                     </div>
-                                    <img src="images/loading.gif" alt="" class="loading">
                                 </div>
 
                                 <p id="uploadPromotion">${nn._([cms.global.PAGE_ID, 'setting-form', 'Upload'])}</p>
@@ -254,12 +251,9 @@
         <label><acronym title="Required field" class="mark-required">*</acronym>${nn._([cms.global.PAGE_ID, 'setting-form', 'Program logo'])}</label>
         <div id="iupLogo" class="fmfield upload-img">
             <div class="thumbnail">
-                <div class="img-wrap">
-                    <div class="img">
-                        <img id="thumbnail-imageUrl" src="images/ch_default.png" alt="" class="photo imgUpShow" />
-                    </div>
+                <div class="img-wrap imgUpShow {{if '' === imageUrl}}no-image{{/if}}" 
+                    style="{{if '' !== imageUrl}}background-image: url('${imageUrl}'){{/if}}">
                 </div>
-                <img src="images/loading.gif" alt="" class="loading" />
             </div>
             <p id="uploadThumbnail">${nn._([cms.global.PAGE_ID, 'setting-form', 'Upload'])}</p>
             <p class="notice img-upload">${nn._([cms.global.PAGE_ID, 'setting-form', 'Better results with 640x480 or higher resolution image'])}</p>
@@ -404,12 +398,8 @@
                 <label>4. Picture for review</label>
                 <div id="iupPaid" class="fmfield upload-img banner-thumb review-thumb">
                     <div class="thumbnail">
-                        <div class="img-wrap">
-                            <div class="img">
-                                <img src="" class="photo imgUpShow" />
-                            </div>
+                        <div class="img-wrap imgUpShow no-image">
                         </div>
-                        <img src="images/loading.gif" alt="" class="loading">
                     </div>
                     <p id="uploadPaid">${nn._([cms.global.PAGE_ID, 'setting-form', 'Upload'])}</p>
                     <p class="notice img-upload">Better results with 640 x 360 resolution image</p>
