--- a/channel-setting.html
+++ b/channel-setting.html
@@ -540,9 +540,10 @@
     <div class="fminput clearfix">
         <label for="name">${nn._([cms.global.PAGE_ID, 'setting-form', 'Facebook page'])}</label>
         <div class="fmfield">
+            <img src="images/icon_fb.png" alt="facebook" class="icon" />
             <p class="text"><span>
             <input type="text" name="tmpSocialFeeds" id="tmpSocialFeeds" maxlength="100" value="" class="text" /></span></p>
-            <input type="hidden" name="socialFeeds" id="socialFeeds" maxlength="100" value="" class="text" /></span></p>
+            <input type="hidden" name="socialFeeds" id="socialFeeds" maxlength="100" value="${socialFeeds}" class="text" /></span></p>
             <span class="notice "></span>
         </div>
     </div>
