iap delete mail support

--- a/channel-setting.html
+++ b/channel-setting.html
@@ -416,7 +416,7 @@
 
             </div>
 
-        <a href="javascripts:void(0)" id='paidRemove' class="fmfield clearfix icon-exclamation hide">
+        <a href="mailto:iapsupport@flipr.tv" id='paidRemove' class="fmfield clearfix icon-exclamation hide">
             <span>If you want to delete the product from App store or Google play please contact with us before a month.</span>
 
         </a>
