channel setting , if paidChannel === true ,  isPublic = false

--- a/channel-add.html
+++ b/channel-add.html
@@ -197,7 +197,6 @@
 <div id="content-main-wrap" class="footer-on">
 <div class="constrain">
 <form name="settingForm" id="settingForm" method="get" action="" data-height="361">
-    <input type="hidden" name="isPublic" id="isPublic" value="true" />
 <!-- IAP Start -->
 
                         <div class="fminput clearfix">
@@ -371,6 +370,7 @@
                 </ul>
                 <input id="paidChannel" type="hidden" name="paidChannel" value="${paidChannel}" data-oristatus="${paidChannel}" class="select-meta">
             </div>
+            <input type="hidden" id="isPublic" name="isPublic" value="true">
         </div>
         <div id="paidBlock" class="fmfield clearfix hide">
             <div class="fminput clearfix">
