--- a/channel-setting.html
+++ b/channel-setting.html
@@ -344,6 +344,7 @@
                 </ul>
                 <input id="paidChannel" type="hidden" name="paidChannel" value="${paidChannel}" data-oristatus="${paidChannel}" class="select-meta">
             </div>
+            <input type="hidden" id="isPublic" name="isPublic" value="${isPublic}">
         </div>
         <div id="paidBlock" class="fmfield clearfix hide">
             <div class="fminput clearfix">
