3. Program price 的Free program 下拉式選單下方，沒有出現提示文字"If you want to delete the product from App store or Google play please contact with us before a month."
4. "If you want to delete the product from App store or Google play please contact with us before a month." 要在儲存後才會出現，點擊後要 mailto:paidsupport@flipr.tv

--- a/channel-setting.html
+++ b/channel-setting.html
@@ -418,11 +418,10 @@
 
             </div>
 
-        <a href="mailto:iapsupport@flipr.tv" id='paidRemove' class="fmfield clearfix icon-exclamation hide">
+        <a href="javascript:void(0)" id='paidRemove' class="fmfield clearfix icon-exclamation">
             <span>
             ${nn._([cms.global.PAGE_ID, 'setting-form', 'If you want to delete the product from App store or Google play please contact with us before a month.'])}
             </span>
-
         </a>
         </div>
     </div>
