6. Program price 前與子項目都要有必填符號 "*"

--- a/channel-setting.html
+++ b/channel-setting.html
@@ -332,7 +332,8 @@
 <!-- IAP Start -->
 
     <div class="fminput clearfix">
-        <label>${nn._([cms.global.PAGE_ID, 'setting-form', 'Program price'])}</label>
+        <label><acronym class="mark-required" title="Required field">*</acronym>
+                ${nn._([cms.global.PAGE_ID, 'setting-form', 'Program price'])}</label>
         <div class="fmfield clearfix">
             <div class="select enable">
                 <p class="select-btn"></p>
@@ -351,7 +352,8 @@
                 <label>${nn._([cms.global.PAGE_ID, 'setting-form', 'Program price'])}</label>
             </div>
             <div class="fminput clearfix">
-                <label>1. ${nn._([cms.global.PAGE_ID, 'setting-form', 'Price'])}</label>
+                <label><acronym class="mark-required" title="Required field">*</acronym>
+                        1. ${nn._([cms.global.PAGE_ID, 'setting-form', 'Price'])}</label>
                 <div class="fmfield">
                     <div class="select enable">
                         <p class="select-btn"></p>
@@ -375,7 +377,8 @@
                 </div>
             </div>
             <div class="fminput clearfix">
-                <label>2. ${nn._([cms.global.PAGE_ID, 'setting-form', 'Publication name'])}</label>
+                <label><acronym class="mark-required" title="Required field">*</acronym>
+                        2. ${nn._([cms.global.PAGE_ID, 'setting-form', 'Publication name'])}</label>
                 <div class="fmfield">
                     <p class="text">
                         <span>
@@ -385,7 +388,8 @@
                 </div>
             </div>
             <div class="fminput clearfix">
-                <label>3. ${nn._([cms.global.PAGE_ID, 'setting-form', 'Description'])}</label>
+                <label><acronym class="mark-required" title="Required field">*</acronym>
+                        3. ${nn._([cms.global.PAGE_ID, 'setting-form', 'Description'])}</label>
                 <div class="fmfield">
                     <p class="textarea">
                         <span>
@@ -397,7 +401,8 @@
                 </div>
             </div>
             <div class="fminput clearfix">
-                <label>4. ${nn._([cms.global.PAGE_ID, 'setting-form', 'Picture for review'])}</label>
+                <label><acronym class="mark-required" title="Required field">*</acronym>
+                        4. ${nn._([cms.global.PAGE_ID, 'setting-form', 'Picture for review'])}</label>
                 <div id="iupPaid" class="fmfield upload-img banner-thumb review-thumb">
                     <div class="thumbnail">
                         <div class="img-wrap imgUpShow no-image">
