8. Curated program 在 Program list 要標上TAG"Curated program"
9. Program price 請拿掉 Price 項目中的 $ 10.99

--- a/channel-add.html
+++ b/channel-add.html
@@ -363,11 +363,11 @@
         <div class="fmfield clearfix">
             <div class="select enable">
                 <p class="select-btn"></p>
-                <p class="select-txt"><a href="#">${nn._([cms.global.PAGE_ID, 'setting-form', 'Free programe'])}</a>
+                <p class="select-txt"><a href="#">${nn._([cms.global.PAGE_ID, 'setting-form', 'Free program'])}</a>
                 </p>
                 <ul id="paid-select-list" class="select-list">
-                    <li data-meta="false">${nn._([cms.global.PAGE_ID, 'setting-form', 'Free programe'])}</li>
-                    <li data-meta="true">${nn._([cms.global.PAGE_ID, 'setting-form', 'Paid programe'])}</li>
+                    <li data-meta="false">${nn._([cms.global.PAGE_ID, 'setting-form', 'Free program'])}</li>
+                    <li data-meta="true">${nn._([cms.global.PAGE_ID, 'setting-form', 'Paid program'])}</li>
                 </ul>
                 <input id="paidChannel" type="hidden" name="paidChannel" value="${paidChannel}" data-oristatus="${paidChannel}" class="select-meta">
             </div>
@@ -396,7 +396,6 @@
                             <li data-meta="7.99">$ 7.99 USD</li>
                             <li data-meta="8.99">$ 8.99 USD</li>
                             <li data-meta="9.99">$ 9.99 USD</li>
-                            <li data-meta="10.99">$ 10.99 USD</li>
                         </ul>
                         <input type="hidden" name="iap_price" value="" class="select-meta price">
                     </div>
