11. Program settings 英文字 Add to My App 改成 Publish to app

--- a/channel-setting.html
+++ b/channel-setting.html
@@ -522,7 +522,7 @@
     {{if cms.global.USER_PRIV.isAutoOn === true}}
     <div class="fminput clearfix">
         <input type="hidden" id="StorePool" name="status" value="${status}" />
-        <label>{{html nn._([cms.global.PAGE_ID, 'setting-form', 'Add to My App'])}}</label>
+        <label>{{html nn._([cms.global.PAGE_ID, 'setting-form', 'Publish to App'])}}</label>
         <div class="fmfield">
             <div class="connected add-store">
                 <div class="share-item first">
