2. "Select brand to auto share" 要隱藏

--- a/channel-setting.html
+++ b/channel-setting.html
@@ -449,7 +449,7 @@
     </div>
     {{/if}}
     {{if cms.global.IS_REMARK !== true}}
-    <div class="fminput clearfix">
+    <div class="fminput clearfix hide">
         <label>{{html nn._([cms.global.PAGE_ID, 'setting-form', 'Select brand to auto share'])}}</label>
         <div class="fmfield">
             <div class="connect-switch">
