--- a/channel-setting.html
+++ b/channel-setting.html
@@ -131,6 +131,30 @@
 </div>
 <!-- Facebook Connect Failed2 Layer End -->
 
+<!-- System confirm alert overlay -->
+<div id="system-confirm-alert-overlay" class="overlay-h172 youtube-sync-alert">
+    <div class="overlay-h172-left"></div>
+    <div class="overlay-h172-center">
+        <p class="btn-close"></p>
+        <img src="images/icon_warning_lg.png" alt="">
+        <p class="vMsg"></p>
+        <div class="overlay-button-holder">
+            <div class="btn-gray">
+                <p class="left"></p>
+                <p class="center system-confirm-btn scov-no" data-act="no">No</p>
+                <p class="right"></p>
+            </div>
+            <div class="btn-gray">
+                <p class="left"></p>
+                <p class="center system-confirm-btn scov-yes" data-act="yes">Yes</p>
+                <p class="right"></p>
+            </div>
+        </div>
+    </div>
+    <div class="overlay-h172-right"></div>
+</div>
+<!-- System confirm alert overlay End-->
+
 <!-- Youtube sync alert overlay -->
 <div id="youtube-sync-alert-overlay" class="overlay-h172 youtube-sync-alert">
     <div class="overlay-h172-left"></div>
