--- a/channel-setting.html
+++ b/channel-setting.html
@@ -214,7 +214,8 @@
                                     </div>
                                 </div>
 
-                                <p id="uploadPromotion">${nn._([cms.global.PAGE_ID, 'setting-form', 'Upload'])}</p>
+                                <a class="normal-btn imgUploadBtn" href="javascript:void(0);" data-ori="${nn._([cms.global.PAGE_ID, 'setting-form', 'Upload'])}" data-uploading="${nn._([cms.global.PAGE_ID, 'setting-form', 'Uploading...'])}">${nn._([cms.global.PAGE_ID, 'setting-form', 'Upload'])}</a>
+                                <input type="file" class="hide toUploadImage" accept="image/*" />
 
                                 <p class="notice img-upload">${nn._([cms.global.PAGE_ID, 'setting-form', 'Better results with 640 x 360 resolution image'])}</p>
                                 <p class="notice upload-notice hide">Please upload jpeg, png, or gif files.</p>
@@ -280,7 +281,8 @@
                     style="{{if '' !== imageUrl}}background-image: url('${imageUrl}'){{/if}}">
                 </div>
             </div>
-            <p id="uploadThumbnail">${nn._([cms.global.PAGE_ID, 'setting-form', 'Upload'])}</p>
+            <a class="normal-btn imgUploadBtn" href="javascript:void(0);" data-ori="${nn._([cms.global.PAGE_ID, 'setting-form', 'Upload'])}" data-uploading="${nn._([cms.global.PAGE_ID, 'setting-form', 'Uploading...'])}">${nn._([cms.global.PAGE_ID, 'setting-form', 'Upload'])}</a>
+            <input type="file" class="hide toUploadImage" accept="image/*" />
             <p class="notice img-upload">${nn._([cms.global.PAGE_ID, 'setting-form', 'Better results with 640x480 or higher resolution image'])}</p>
             <p class="notice upload-notice hide">${nn._([cms.global.PAGE_ID, 'setting-form', 'Please upload jpeg, png, or gif files.'])}</p>
             <input type="hidden" class="imageUrl"    name="imageUrl"    id="imageUrl"    value="${imageUrl}" />
@@ -431,7 +433,8 @@
                         <div class="img-wrap imgUpShow no-image">
                         </div>
                     </div>
-                    <p id="uploadPaid">${nn._([cms.global.PAGE_ID, 'setting-form', 'Upload'])}</p>
+                    <a class="normal-btn imgUploadBtn" href="javascript:void(0);" data-ori="${nn._([cms.global.PAGE_ID, 'setting-form', 'Upload'])}" data-uploading="${nn._([cms.global.PAGE_ID, 'setting-form', 'Uploading...'])}">${nn._([cms.global.PAGE_ID, 'setting-form', 'Upload'])}</a>
+                    <input type="file" class="hide toUploadImage" accept="image/*" />
                     <p class="notice img-upload">${nn._([cms.global.PAGE_ID, 'setting-form', 'Please upload a screenshot which is at least 640 x 920 pixels and at least 72 dpi.'])}</p>
                     <p class="notice upload-notice hide">Please upload a screenshot which is at least 640 x 920 pixels and at least 72 dpi.</p>
                     <input type="hidden" class="imageUrl"    name="iap_thumbnail"    id="iap_thumbnail"    value="">
