--- a/channel-add.html
+++ b/channel-add.html
@@ -395,7 +395,7 @@
                     <li data-meta="false">${nn._([cms.global.PAGE_ID, 'setting-form', 'Free program'])}</li>
                     <li data-meta="true">${nn._([cms.global.PAGE_ID, 'setting-form', 'Paid program'])}</li>
                 </ul>
-                <input id="paidChannel" type="hidden" name="paidChannel" value="${paidChannel}" data-oristatus="${paidChannel}" class="select-meta">
+                <input id="paidChannel" type="hidden" name="paidChannel" value="" data-oristatus="false" class="select-meta">
             </div>
             <input type="hidden" id="isPublic" name="isPublic" value="true">
         </div>
