for special case under review
paid channel  :  paidChannel == true
under review : paidChannel == false && cntItem > 0
free channel : paidChannel == false && cntItem == 0

--- a/channel-add.html
+++ b/channel-add.html
@@ -395,7 +395,8 @@
                     <li data-meta="false">${nn._([cms.global.PAGE_ID, 'setting-form', 'Free program'])}</li>
                     <li data-meta="true">${nn._([cms.global.PAGE_ID, 'setting-form', 'Paid program'])}</li>
                 </ul>
-                <input id="paidChannel" type="hidden" name="paidChannel" value="" data-oristatus="false" class="select-meta">
+                <input id="paidChannel" type="hidden" name="paidChannel" value="false" data-oristatus="false" class="select-meta">
+                <input id="cntItem" type="hidden" name="cntItem" value="0" >
             </div>
             <input type="hidden" id="isPublic" name="isPublic" value="true">
         </div>
