--- a/channel-setting.html
+++ b/channel-setting.html
@@ -370,6 +370,7 @@
                     <li data-meta="true">${nn._([cms.global.PAGE_ID, 'setting-form', 'Paid program'])}</li>
                 </ul>
                 <input id="paidChannel" type="hidden" name="paidChannel" value="${paidChannel}" data-oristatus="${paidChannel}" class="select-meta">
+                <input id="cntItem" type="hidden" name="cntItem" value="${cntItem}" >
             </div>
             <input type="hidden" id="isPublic" name="isPublic" value="${isPublic}">
         </div>
