under review process

--- a/portal-manage.html
+++ b/portal-manage.html
@@ -374,8 +374,11 @@
             <img src="images/icon_playlist.png" alt="" class="watermark" />
         </a>
         {{if paidChannel}}
-            <span class="cover-text hide"><span class="inner-text">${nn._([cms.global.PAGE_ID, 'channel-list', 'UNDER REVIEW'])}</span></span>
             <span class="badge danger">${nn._([cms.global.PAGE_ID, 'channel-list', 'Paid'])}</span>
+        {{else}}
+            {{if cntItem > 0}}
+                <div class="cover-text"><span class="inner-text">${nn._([cms.global.PAGE_ID, 'channel-list', 'UNDER REVIEW'])}</span></div>        
+            {{/if}}
         {{/if}}
         <div class="ch">
             <div class="img">
@@ -437,7 +440,7 @@ ${nn._([cms.global.PAGE_ID, 'channel-list', 'Sorted by'])} :
 <script id="portal-set-chanels-tmpl" type="text/x-jquery-tmpl">
     <li id="set_${id}" class="itemList notSortable">
         <div class="thumb">
-            {{if !paidChannel}}
+            {{if !paidChannel && cntItem < 1}}
             <div class="btn-top{{if alwaysOnTop == true}} on{{/if}}">
                 <div class="icon-holder"></div>
                 <div class="tip-white">
@@ -479,8 +482,11 @@ ${nn._([cms.global.PAGE_ID, 'channel-list', 'Sorted by'])} :
                 <div class="tip-top"></div>
             </div>
             {{if paidChannel}}
-                <span class="cover-text hide"><span class="inner-text">${nn._([cms.global.PAGE_ID, 'channel-list', 'UNDER REVIEW'])}</span></span>
                 <span class="badge danger">${nn._([cms.global.PAGE_ID, 'channel-list', 'Paid'])}</span>
+            {{else}}
+                {{if cntItem == 0}}
+                    <div class="cover-text"><span class="inner-text">${nn._([cms.global.PAGE_ID, 'channel-list', 'UNDER REVIEW'])}</span></div>
+                {{/if}}
             {{/if}}
             <a href="${cms.global.SHARE_URL_BASE}/view/p${id}" target="_blank">
                 <img class="watermark" alt="" src="images/icon_playlist.png" />
