from lili 請將CMS，create program中的promotion banner變成 非必填項。不是所有的節目都會用到。請儘快做完，謝謝。

--- a/channel-setting.html
+++ b/channel-setting.html
@@ -206,7 +206,7 @@
 
                         <div class="fminput clearfix">
                             <label for="name">
-                                <acronym title="Required field" class="mark-required">*</acronym>${nn._([cms.global.PAGE_ID, 'setting-form', 'Promotion banner'])}</label>
+                                ${nn._([cms.global.PAGE_ID, 'setting-form', 'Promotion banner'])}</label>
                             <div id="iupPromotion" class="fmfield upload-img banner-thumb">
                                 <div class="thumbnail">
                                     <div class="img-wrap imgUpShow {{if '' === bannerImageUrl}}no-image{{/if}}" 
