--- a/channel-add.html
+++ b/channel-add.html
@@ -225,7 +225,7 @@
 
                         <div class="fminput clearfix">
                             <label for="name">
-                                <acronym title="Required field" class="mark-required">*</acronym>${nn._([cms.global.PAGE_ID, 'setting-form', 'Promotion banner'])}</label>
+                                ${nn._([cms.global.PAGE_ID, 'setting-form', 'Promotion banner'])}</label>
                             <div id="iupPromotion" class="fmfield upload-img banner-thumb">
                                 <div class="thumbnail">
                                     <div class="img-wrap imgUpShow no-image" >
