Program Price欄位下方應顯示"separate with commas"而非"Program Price"

--- a/channel-add.html
+++ b/channel-add.html
@@ -402,7 +402,7 @@
         </div>
         <div id="paidBlock" class="fmfield clearfix hide">
             <div class="fminput clearfix">
-                <label>${nn._([cms.global.PAGE_ID, 'setting-form', 'Program price'])}</label>
+                <label>${nn._([cms.global.PAGE_ID, 'setting-form', 'Please input more information for the program.'])}</label>
             </div>
             <div class="fminput clearfix">
                 <label><acronym class="mark-required" title="Required field">*</acronym>
