--- a/channel-add.html
+++ b/channel-add.html
@@ -402,7 +402,7 @@
         </div>
         <div id="paidBlock" class="fmfield clearfix hide">
             <div class="fminput clearfix">
-                <label>${nn._([cms.global.PAGE_ID, 'setting-form', 'Please input more information for the program.'])}</label>
+                <h4>${nn._([cms.global.PAGE_ID, 'setting-form', 'Please input more information for the program.'])}</h4>
             </div>
             <div class="fminput clearfix">
                 <label><acronym class="mark-required" title="Required field">*</acronym>
